Constant-ize PlatformLoggingMXBean